# llm-posttraining-eval

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: baseline.yaml  eval.yaml  posttrain.yaml
configs/overrides/: eval_bad_task.yaml  eval_extended.yaml  eval_smoke.yaml  eval_stress_robustness.yaml  posttrain_smoke.yaml  posttrain_synth.yaml
data/: smoke_train.jsonl
results/: comparison.md  results.md
results/baseline/: failures.jsonl  meta.json  metrics.json
results/posttrained/: config_snapshot.yaml  failures.jsonl  meta.json  metrics.json
scripts/: generate_synthetic_dataset.py  setup_runpod.sh
src/: __init__.py  compare.py  config.py  errors.py  load_model_smoke_test.py  train.py  train_artifacts.py
src/eval/: __init__.py  probes.py  run_eval.py  scoring.py  tasks.py
src/utils/: __init__.py  config_utils.py  logging_setup.py
tests/: load_model_smoke_test.py  test_allocate_counts.py  test_config.py  test_config_utils.py  test_eval_smoke_artifacts.py  test_laod_model_smoke.py  test_load_model_smoke.py  test_run_eval_overrides.py  test_scoring.py  test_train_smoke_artifacts.py
