[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "llm-posttraining-eval"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "transformers>=4.43",
    "accelerate>=0.33",
    "datasets>=2.20",
    "sentencepiece",
    "torch",
    "peft>=0.11",
    "trl>=0.9",
    "bitsandbytes>=0.43",
    "pyyaml>=6.0",
    "tqdm>=4.66"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]