[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-posttraining-eval"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "transformers>=4.43,<5.0",
    "accelerate>=0.33,<2.0",
    "datasets>=2.20,<4.0",
    "sentencepiece",
    "torch",
    "peft>=0.11,<0.20",
    "trl>=0.9,<0.10",
    "bitsandbytes>=0.43,<0.50",
    "pyyaml>=6.0",
    "tqdm>=4.66",
    "protobuf"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true